<resources>
    <string name="app_name">PlanFlex</string>
    <string name="Hellow"><![CDATA[Hellow<name>]]></string>
    <string name="Old_results">Old Results</string>
    <string name="Month">Jan</string>
    <string name="personal_data_input">Tell somethig about you</string>
    <string name="upload_image">Upload Image</string>
    <string name="Name">Name :</string>
    <string name="Name_answer">Enter your name here</string>
    <string name="b_day">Birth Day :</string>
    <string name="Year">YYYY</string>
    <string name="month">MM</string>
    <string name="day">DD</string>
    <string name="daily_routine">Daily Routine</string>
    <string name="wakeUp_time">Wake Up Time:</string>
    <string name="sleep_time">Sleep Time   :</string>
    <string name="who">Who Are You :</string>
    <string name="jb_type">Enter your job here</string>
    <string name="work_time">Work Time :</string>
    <string name="work_time_from">From</string>
    <string name="work_time_to">To</string>
    <string name="aniversary">If yu have any special days like anniversary set it up here. Or else you can set them later...</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="PlanFlex">Plan Flex</string>
    <string name="Habits">Habits</string>
    <string name="habit_des">You can add daily habits and achieve them any time of the day.</string>
    <string name="daily_rem">Daily Reminders</string>
    <string name="daily_rem_des">Add daily tasks with a reminder alarm and you will never forget to complete them.</string>
    <string name="week_rem_des">When you add a weekly task, it will remind with an alarm in every week.</string>
    <string name="week_rem">Weekly Reminder</string>
    <string name="anual_rem">Annual Reminder</string>
    <string name="annual_rem_des">With this function you will never forget a birthday or anniversary again.Once you set it will alarm annually.</string>
    <string name="future_rem">Future Reminder</string>
    <string name="future_rem_des">You will never problem with credit card expiration or things like that. You can set when it should alarm and how many times it should alarm.</string>
    <string name="shop_list">Shopping List</string>
    <string name="shop_list_des">Add items that you need to buy and this function will notify your at before off from work and at off time and hour after off from work.</string>
    <string name="daily_rout">Daily Routine</string>
    <string name="daily_rout_des">Setup your wake up time,sleep time,Work on time, Work off time ect.</string>
    <string name="personal">Personal Details Manager</string>
    <string name="personal_des">Add personal details like bank pin number,Account number,Emails, Passwords with password protection.</string>
    <string name="no_task">You have no tasks yet.</string>
    <string name="save">Save</string>
    <string name="shoppig">Shopping List</string>
    <string name="addItem">Add List</string>
    <string name="listName">List Name</string>
    <string name="list">Enter List</string>
    <string name="editList">Edit List</string>

</resources>