<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3498db"
    tools:context=".info">




    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
 />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="43dp"
        android:layout_height="37dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"

        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="657dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="13dp"
        android:background="@color/thirty"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="300dp"
                        android:layout_height="130dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="1140dp"
                        android:text="@string/personal_des"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView27" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="251dp"
                        android:layout_height="81dp"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="935dp"
                        android:text="@string/personal"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView28" />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="300dp"
                        android:layout_height="130dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="950dp"
                        android:text="@string/daily_rem_des"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView27" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-250dp"
                        android:layout_marginTop="790dp"
                        android:text="@string/daily_rem"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        app:layout_constraintStart_toEndOf="@+id/textView28"
                        app:layout_constraintTop_toBottomOf="@+id/textView28" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="300dp"
                        android:layout_height="130dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="780dp"
                        android:text="@string/shop_list_des"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView27"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="300dp"
                        android:layout_height="130dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="610dp"
                        android:text="@string/future_rem_des"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView27"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-250dp"
                        android:layout_marginTop="621dp"
                        android:text="@string/shop_list"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        app:layout_constraintStart_toEndOf="@+id/textView34"
                        app:layout_constraintTop_toBottomOf="@+id/textView28"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView36"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="460dp"
                        android:text="@string/future_rem"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView28" />

                    <TextView
                        android:id="@+id/textView37"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-260dp"
                        android:layout_marginTop="300dp"
                        android:text="@string/anual_rem"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        app:layout_constraintStart_toEndOf="@+id/textView28"
                        app:layout_constraintTop_toBottomOf="@+id/textView28" />

                    <TextView
                        android:id="@+id/textView38"
                        android:layout_width="280dp"
                        android:layout_height="102dp"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="455dp"
                        android:text="@string/annual_rem_des"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView27"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="280dp"
                        android:layout_height="104dp"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="330dp"
                        android:text="@string/week_rem_des"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView27" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-55dp"
                        android:layout_marginTop="36dp"
                        android:background="@color/ten"
                        android:text="@string/PlanFlex"
                        android:textColor="@color/black"
                        android:textSize="60sp"
                        android:translationX="120dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="54dp"
                        android:layout_marginTop="182dp"
                        android:text="@string/week_rem"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView28" />

                    <TextView
                        android:id="@+id/textView41"
                        android:layout_width="262dp"
                        android:layout_height="99dp"
                        android:layout_marginStart="57dp"
                        android:layout_marginTop="180dp"
                        android:text="@string/daily_rem_des"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView27" />

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="63dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/daily_rem"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView28" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="135dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/Habits"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="262dp"
                        android:layout_height="99dp"
                        android:layout_marginStart="54dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/habit_des"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView27" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>